network-policy-demo/db-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  namespace: concession-kiosk
spec:
  podSelector:
    matchLabels:
      role: mongodb
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        deployment: backend
    ports:
    - protocol: TCP
      port: 27017
